[chore][deploy] Change JDK path for JDK17

--- a/roles/dingo/templates/import.sh.j2
+++ b/roles/dingo/templates/import.sh.j2
@@ -19,7 +19,7 @@ ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
 JAR_PATH=$(find $ROOT -name dingo-cli-*.jar)
 NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
 
-{{ jdk_home }}/bin/java ${JAVA_OPTS} \
+$ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
      -Dlogback.configurationFile=file:${ROOT}/conf/logback-import.xml \
      -classpath ${JAR_PATH}:${NET_JAR_PATH} \
      io.dingodb.cli.source.Import \
