--- a/roles/dingo/templates/start-driver.sh.j2
+++ b/roles/dingo/templates/start-driver.sh.j2
@@ -19,7 +19,7 @@ ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
 JAR_PATH=$(find $ROOT -name driver-server-*.jar)
 NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
 
-nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
+nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
     -Dlogback.configurationFile=file:${ROOT}/conf/logback-driver.xml \
     -classpath ${JAR_PATH}:${NET_JAR_PATH} \
     io.dingodb.driver.server.Starter \
