--- a/roles/dingo/templates/start-executor.sh.j2
+++ b/roles/dingo/templates/start-executor.sh.j2
@@ -23,14 +23,14 @@ NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
 JAVA_OPTS="-Xms8g -Xmx8g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -XX:MaxDirectMemorySize=4096m -javaagent:{{ dingo_home }}/libs/jmx_prometheus_javaagent-0.17.2.jar={{ jmx_prometheus_javaagent_port }}:{{ dingo_home }}/conf/jmx_config.yaml"
 {% if is_license_support %}
  LICENSE_JAR_PATH=$(find $ROOT -name license.jar)
-nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
+nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
       -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
       -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH}:${LICENSE_JAR_PATH}  \
       io.dingodb.server.executor.Starter \
       --config ${ROOT}/conf/executor.yaml \
       > {{ dingo_log_path }}/executor.out &
 {% else %}
-nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
+nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
      -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
      -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH} \
      io.dingodb.server.executor.Starter \
