--- a/roles/dingo/templates/start-proxy.sh.j2
+++ b/roles/dingo/templates/start-proxy.sh.j2
@@ -22,7 +22,7 @@ JAR_PATH=$(find $ROOT -name dingo-proxy*.jar)
 JAVA_OPTS="-Xms1g -Xmx1g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError"
 
 
-nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
+nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
      -Dlogging.config=file:${ROOT}/conf/logback-proxy.xml \
      -jar ${JAR_PATH} \
      --spring.config.location=${ROOT}/conf/application-proxy.yaml \
