--- a/roles/dingo/templates/executor-noldap.yaml.j2
+++ b/roles/dingo/templates/executor-noldap.yaml.j2
@@ -14,6 +14,7 @@ variable:
     autoIncrementIncrement: 1
     autoIncrementOffset: 1
     enableTableLock: true
+    lowerCaseTableNames: 2
 common:
     scheduledCoreThreads: 16
     lockCoreThreads: 0
@@ -22,6 +23,7 @@ store:
     bufferSize: {{ dingo_executor_buffer_size }}
     bufferNumber: {{ dingo_executor_buffer_number }}
     fileSize: {{ dingo_executor_file_size }}
+    path: {{ dingo_home }}/localStore
 security:
     cipher:
         keyPath: {{ dingo_home }}/conf/dingodb.jks
