[chore][deploy] Fix executor script and application proxy template

--- a/roles/dingo/templates/application-proxy-dev.yaml.j2
+++ b/roles/dingo/templates/application-proxy-dev.yaml.j2
@@ -8,3 +8,5 @@ server:
     grpc:
         port: {{ dingo_proxy_grpc_port }}
     coordinatorExchangeSvrList: {{ dingo_coordinator_exchange_connection_list }}
+    client:
+      retry: 60
