--- a/roles/dingo/templates/start-executor.sh.j2
+++ b/roles/dingo/templates/start-executor.sh.j2
@@ -52,6 +52,7 @@ nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
 {% else %}
 nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
      --add-opens java.base/java.util=ALL-UNNAMED \
+     --add-opens java.base/java.lang=ALL-UNNAMED \
      -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
      -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH} \
      io.dingodb.server.executor.Starter \
