[executor] Support ZGC and multi partition parallel execution

--- a/roles/dingo/templates/executor.yaml.j2
+++ b/roles/dingo/templates/executor.yaml.j2
@@ -21,6 +21,7 @@ common:
     globalCoreThreads: 0
     gcSafePointPeriod: 300
     gcDeleteRegionPeriod: 60
+    enableGcSdkRegion: true
 store:
     bufferSize: {{ dingo_executor_buffer_size }}
     bufferNumber: {{ dingo_executor_buffer_number }}
