--- a/roles/dingo/templates/start-executor.sh.j2
+++ b/roles/dingo/templates/start-executor.sh.j2
@@ -24,9 +24,13 @@ NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
 
 JAVA_OPTS="\
     -Xms8g -Xmx8g \
-    -XX:+UseG1GC \
-    -XX:MaxGCPauseMillis=100 \
-    -XX:G1HeapRegionSize=4M \
+    -XX:+UseZGC \
+    -XX:SoftMaxHeapSize=8g \
+    -XX:ZAllocationSpikeTolerance=5 \
+    -XX:+ZProactive \
+    -XX:ZCollectionInterval=4 \
+    -XX:+UseLargePages \
+    -XX:+UseNUMA \
     -XX:+ParallelRefProcEnabled \
     -XX:+AlwaysPreTouch \
     -XX:+DisableExplicitGC \
