[executor] Sync logback config

--- a/roles/dingo/templates/logback-executor.xml.j2
+++ b/roles/dingo/templates/logback-executor.xml.j2
@@ -447,6 +447,9 @@
     <logger name="io.dingodb.store.proxy.ddl.DdlHandler" level="${log.level}" additivity="false">
         <appender-ref ref="ASYNC-Ddl"/>
     </logger>
+    <logger name="io.dingodb.meta.ddl" level="${log.level}" additivity="false">
+        <appender-ref ref="ASYNC-Ddl"/>
+    </logger>
 
     <appender name="ASYNC-Sql" class="ch.qos.logback.classic.AsyncAppender">
         <includeCallerData>true</includeCallerData>
@@ -618,6 +621,10 @@
         <appender-ref ref="ASYNC-COORDINATOR_RPC"/>
     </logger>
 
+    <logger name="io.dingodb.sdk.service.desc.coordinator.CoordinatorServiceDescriptors$DropRegion" level="debug" additivity="false">
+        <appender-ref ref="ASYNC-COORDINATOR_RPC"/>
+    </logger>
+
     <appender name="ASYNC-VERSION_RPC" class="ch.qos.logback.classic.AsyncAppender">
         <includeCallerData>true</includeCallerData>
         <discardingThreshold>0</discardingThreshold>
@@ -690,3 +697,4 @@
         <appender-ref ref="STDOUT" />
     </root>
 </configuration>
+
