--- a/roles/dingo/templates/start-executor.sh.j2
+++ b/roles/dingo/templates/start-executor.sh.j2
@@ -18,9 +18,10 @@
 
 ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
 JAR_PATH=$(find $ROOT -name dingo-executor-*.jar)
-STORE_JAR_PATH=$(find $ROOT -name dingo-store*.jar)
+LOCAL_STORE_JAR_PATH=$(find $ROOT -name dingo-store-local*.jar)
 NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
-# JAVA_OPTS="-Xms8g -Xmx8g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -XX:MaxDirectMemorySize=4096m -javaagent:{{ dingo_home }}/libs/jmx_prometheus_javaagent-0.17.2.jar={{ jmx_prometheus_javaagent_port }}:{{ dingo_home }}/conf/jmx_config.yaml"
+APP_HOME=$( cd "$( dirname "$0" )/.." && pwd )
+PLATFORM=$(uname -s)-$(uname -m | sed 's/x86_64/x64/')
 
 JAVA_OPTS="\
     -Xms8g -Xmx8g \
@@ -42,26 +43,30 @@ JAVA_OPTS="\
     -XX:TieredStopAtLevel=4 \
     -XX:InitialCodeCacheSize=256m \
     -Xlog:gc*:file={{ dingo_log_path }}/gc.log:time:filecount=5,filesize=100M \
-    -javaagent:{{ dingo_home }}/libs/jmx_prometheus_javaagent-0.17.2.jar={{ jmx_prometheus_javaagent_port }}:{{ dingo_home }}/conf/jmx_config.yaml \
 "
+
+EMBEDDED_JDK="${APP_HOME}/${PLATFORM}"
+if [ -d "${EMBEDDED_JDK}" ]; then
+    export DINGO_JAVA_HOME="${EMBEDDED_JDK}"
+    PATH="${DINGO_JAVA_HOME}/bin:${PATH}"
+fi
+
 
 {% if is_license_support %}
  LICENSE_JAR_PATH=$(find $ROOT -name license.jar)
-nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
+nohup ${DINGO_JAVA_HOME}/bin/java ${JAVA_OPTS} \
       -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
-      -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH}:${LICENSE_JAR_PATH}  \
+      -classpath ${JAR_PATH}:${NET_JAR_PATH}:${LOCAL_STORE_JAR_PATH}:${LICENSE_JAR_PATH}  \
       io.dingodb.server.executor.Starter \
       --config ${ROOT}/conf/executor.yaml \
       > {{ dingo_log_path }}/executor.out &
 {% else %}
-nohup $ROOT/Linux-x64/bin/java ${JAVA_OPTS} \
+nohup ${DINGO_JAVA_HOME}/bin/java ${JAVA_OPTS} \
      --add-opens java.base/java.util=ALL-UNNAMED \
      --add-opens java.base/java.lang=ALL-UNNAMED \
      -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
-     -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH} \
+     -classpath ${JAR_PATH}:${NET_JAR_PATH}:${LOCAL_STORE_JAR_PATH} \
      io.dingodb.server.executor.Starter \
      --config ${ROOT}/conf/executor.yaml \
      > {{ dingo_log_path }}/executor.out &
 {% endif %}
-
-
